src/styles.css
/* ... */
.row-balance-sheet-items {
  display: flex;
  column-gap: 7px;
  align-items: center;
}

/***********************************/

.repayment-order-btns {
  display: flex;
  column-gap: 10px;
  margin-left: 20px;
}

.repayment-order-btns button {
  width: 50px;
  height: 30px;
  border-radius: .25rem;
  border: 1px solid var(--border-color);
  color: #7C848B;
}

.row.row-payments {
  display: flex;
  justify-content: space-between;
  margin-top: 2rem;
}

.row-payments-container {
  display: flex;
  flex-direction: column;
  width: 22%;
}

.online__applications .row-payments-container {
  width: 30%;
}

.loans-filter .row-payments-container {
  display: flex;
  flex-direction: column;
  width: 16%;
}

.loans-filter .row-loans .row-payments-container {
  display: flex;
  flex-direction: column;
  width: 28%;
}


.form-label.row-label, .custom-select-form.row-form {
  width: 100%;
}

.row-containers {
  display: flex;
  flex-direction: column;
  padding:20px;
  border: 1px solid var(--border-color);
}

/* dashboard  */

.book-value-section {
  border: 1px solid var(--border-color);
  padding: 20px;
}

.book-value-select-section, .book-value-update-section {
  display: flex;
  justify-content: space-between;
}

.book-value-select-section {
  margin-bottom: 20px;
}

.book-value-select-section .fields-container-select.select_container_width {
  width: 10%;
}

.book-value-select-section .fields-container-select.select_container_width.branch {
  width: 88%;
}

.book-value-select-section .fields-container-select .custom-select-form.select_width {
  width: 100%;
}

.book-value-info-box {
  border: 1px solid var(--border-color); 
  padding: 20px; 
  flex: 0 0 19%; 
  max-width: 19%; 
  display: grid; 
  row-gap: 1rem;
}

.dashboard-section-title {
  font-size: 1rem;
  font-weight: 600;
}

.dashboard-section-amount-or-number {
  font-size: 1.25rem;
  font-weight: 600;
  color: var(--info);
}

.dashboard-section-sub-title {
  font-size: var(--medium-font-size);
  font-weight: 500;
}

.dashboard-section-amount-or-number.upward-change {
  color: var(--success);
}

.dashboard-section-amount-or-number.no-change {
  color: var(--warning);
}

.dashboard-section-amount-or-number.downward-change {
  color: var(--danger);
}

.chart-section {
  display: block;
}

.chart-container {
  border: 1px solid var(--border-color); 
  padding: 20px;
  width: 100%;
  margin-top: 20px; 
  height: 320px;
}

.chart-scroller {
  border: 1px solid var(--border-color); 
  padding: 20px; 
  width: 100%; 
}

.chart-scroller.header {
  border-bottom: 0;
}

.chart-scroller.bottom {
  border-top: 0;
}

.chart-scroller .uil-arrow-circle-left {
  font-size: 1.25rem;
  color: var(--info);
}

.loans_clients_summary_container, 
.guarantor_border {
  border: 1px solid var(--border-color);
  padding: var(--p-1-5);
  width: 100%;
}

.footer {
  border: 1px solid var(--border-color);
}

.loans_clients_summary_container-header {
  display: flex;
  align-items: center;
  margin-bottom: var(--m-1-5);
  cursor: pointer;
}

.uil.uil-angle-down.arrow_rotate.loans_clients_summary-arrow {
  transform: rotate(-180deg);
}

.loans_clients_summary-arrow  {
  font-size: 2rem;
  color: var(--info);
}

.loans_clients_summary-arrow {
  margin-left: auto;
  transition: 0.4s;
}

.loan_client_item_list.grid {
  display: none;
}

.loan_client_item_list.grid.showDiv {
  display: grid;
}

.loan_client_item_list {
  row-gap: 20px;
}

.loan_client_summary__titles {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.5rem;
}

.loan_client_item_name {
  font-size: var(--medium-font-size);
  font-weight: 500;
}

.loan_client_item__bar {
  background-color: #bbeced;
}

.loan_client_item__bar, .loan_client_item__percentage {
  height: 5px;
  border-radius: 0.25rem;
}

.loan_client_item__percentage {
  display: block;
  background-color: var(--info);
}

.loan_client_item__percentage.in_arrears {
  background-color: var(--info-light);
}

.loan_client_item__percentage.fully_paid {
  background-color: var(--success);
}

.loan_client_item__percentage.over_paid_loans {
  background-color: var(--warning);
}

.loan_client_item__percentage.defaulted_loans {
  background-color: var(--danger);
}

.loan_client_item__percentage.written_off_loans {
  background-color: #000;
}

.loan_client_item__percentage.processing_loans {
  background-color: #c4c4f5;
}

.loan_client_item__percentage.restructured_loans {
  background-color: #343A40;
}

.row.custom-background .custom-select-form, .row-payments-container.custom-background .custom-select-form {
  background: var(--white);
}

.custom-select-form.row-form.input-background, 
.form-control.input-background,
.input-group.search_input,
.reports-input-group.search_input {
  background: var(--white);
}

/* works in chrome  */
select option {
  background-color: var(--white) !important;
  line-height: 2rem !important;
}

.table-head-row {
  background: var(--home-section-color);
}

/* skeleton loading  */

#dark .skeleton {
  opacity: .7;
  animation: skeleton-loading-dark 1s linear infinite alternate;
}

@keyframes skeleton-loading-dark {
  0% {
      /* background-color: hsl(200, 20%, 70%); */
      background-color: hsl(0, 0%, 20%);
  }
  100% {
      /* background-color: hsl(200, 20%, 95%); */
      background-color: hsl(0, 0%, 30%);
  }
}

.slide {
  animation-name            : displaceContent;
  animation-duration        : 0.1s;
  animation-iteration-count : 1;
  animation-fill-mode       : forwards;
}

@keyframes displaceContent {
  from { transform : translateX(-3rem) }
  to   { transform : translateX(0rem) } 
}

#light .skeleton {
  opacity: .7;
  animation: skeleton-loading 1s linear infinite alternate;
}

@keyframes skeleton-loading {
  0% {
      /* background-color: hsl(200, 20%, 70%); */
      background-color: hsl(225, 20%, 86%);
  }
  100% {
      /* background-color: hsl(200, 20%, 95%); */
      background-color: hsl(225, 20%, 96%);
  }
}
/* ... */

